--- a/parent-pom/pom.xml
+++ b/parent-pom/pom.xml
@@ -12,12 +12,12 @@
     <!-- students: replace with your AP org ID -->
     <groupId>7e8f60f2-158f-4c53-aab4-d8bd7bf8cb7d</groupId>
     <artifactId>solutions-bom</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <relativePath>../bom/pom.xml</relativePath>
   </parent>
   <artifactId>solutions-parent-pom</artifactId>
   <groupId>7e8f60f2-158f-4c53-aab4-d8bd7bf8cb7d</groupId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
   <!-- IMPORTANT: Due to a limitation in MUnit, this file must be installed into the local Maven repo after every change: -->
   <!-- mvn -f pom.xml install:install-file -Dfile=pom.xml -DpomFile=pom.xml -->
