--- a/apps-commons/pom.xml
+++ b/apps-commons/pom.xml
@@ -11,13 +11,13 @@
 		<!-- students: replace with your AP org ID -->
 		<groupId>7e8f60f2-158f-4c53-aab4-d8bd7bf8cb7d</groupId>
 		<artifactId>solutions-parent-pom</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 		<relativePath>../parent-pom/pom.xml</relativePath>
 	</parent>
 	<!-- students: replace with your AP org ID -->
 	<groupId>7e8f60f2-158f-4c53-aab4-d8bd7bf8cb7d</groupId>
 	<artifactId>apps-commons</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
 	<name>apps-commons</name>
 	<build>
